okd/01-kata-deploy-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kata-deploy
